--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -17,4 +17,7 @@ jobs:
           SHOW_LANGUAGE: "True"
           SHOW_PROJECTS: "True"
           SHOW_OS: "True"
+          SHOW_LOC_CHART: "False"
+          SHOW_COMMIT: "False"
+          SHOW_DAYS_OF_WEEK: "False"
           
