--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -14,10 +14,11 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_LANGUAGE: "True"
+          SHOW_LANGUAGE: "False"
           SHOW_PROJECTS: "True"
           SHOW_OS: "True"
           SHOW_LOC_CHART: "False"
           SHOW_COMMIT: "False"
           SHOW_DAYS_OF_WEEK: "False"
+          SHOW_SHORT_INFO: "False"
           
