--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -23,4 +23,5 @@ jobs:
           SHOW_SHORT_INFO: "False"
           SHOW_PROFILE_VIEWS: "False"
           SHOW_TOTAL_CODE_TIME: "False"
+          SHOW_LANGUAGE_PER_REPO: "False"
           
