--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -24,4 +24,4 @@ jobs:
           SHOW_PROFILE_VIEWS: "False"
           SHOW_TOTAL_CODE_TIME: "False"
           SHOW_LANGUAGE_PER_REPO: "False"
-          
+          DEBUG_LOGGING: "True"
